Fixed home page card overflowing.

--- a/site/shared/style.css
+++ b/site/shared/style.css
@@ -37,7 +37,7 @@ main {
     left: 5%;
 }
 
-.card {
+.s12 .card {
     width: 100%;
 }
 
